--- a/application/src/components/ui/HeroBackground.astro
+++ b/application/src/components/ui/HeroBackground.astro
@@ -2,7 +2,7 @@
 import bgMasthead from '../../assets/bg-masthead.jpg';
 ---
 
-<div id="hero-bg" class="absolute inset-0 z-0">
+<div id="hero-bg" class="absolute inset-0 z-0" data-parallax-speed="0.35">
 	<img 
 		src={bgMasthead.src} 
 		alt="Desert radar landscape" 
